# Inators

./: .gitignore  README.md  aliases.sh  list.txt
bash_scripts/: ReadMe.md  add_custom_teams_backgrounds  keep_master.sh  prefix_commits_with_ticket_number.sh
clipinator/: README.md  batch_files_menus.py  batch_files_selection_menu.py  clipinator.py  constants.py  pyproject.toml  requirements.txt
clipinator/src/: batch_files.py  clipinator.py  clips.py  constants.py  file_util.py  string_util.py  substitles.py
fortuna/: .gitignore  IMDBCacheConstants.py  IMDBService.py  ReadME.md  enums.py  fortuna.py  imdb_api_client.py  pyproject.toml  requirements.txt
fortuna/src/: IMDBCacheConstants.py  IMDBService.py  fortuna.py
infrastructure/: example.py  genapi_llm_service_impl.py  llm_service.py
ripinator/: ReadMe.md  pyproject.toml  requirements.txt  ripinator.py
ripinator/src/: ripinator.py
samwise/: README.md  file_mover.py  file_namer.py  pyproject.toml  requirements.txt  samwise.py  test_file_namer.py
samwise/src/: samwise.py
util/: JsonDatabase.py  file_mover.py  file_namer.py  file_namer_llm_prompts.py  llm_client.py  logger.py  print_colors.py  printer.py  youtube_api_client.py
