[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortuna"
version = "0.1.0"
description = "CLI tool for randomly picking and getting info on movies/series."
requires-python = ">=3.8"
dependencies = [
    "art",
    "PyMovieDb",
    "pysondb",
    "click",
]

[project.scripts]
fortuna = "fortuna:fortuna_cli"

[tool.setuptools.packages.find]
where = ["src"]

