[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samwise"
version = "0.1.0"
description = "CLI tool for organising local movie/series/anime collections."
requires-python = ">=3.8"
dependencies = []

[project.scripts]
samwise = "samwise:__main__"

[tool.setuptools.packages.find]
where = ["src"]

